[gd_scene load_steps=4 format=1]

[ext_resource path="res://demo.gd" type="Script" id=1]
[ext_resource path="res://addons/terminal/terminal.tscn" type="PackedScene" id=2]
[ext_resource path="res://fonts/Ubuntu_mono_regular.tres" type="DynamicFont" id=3]

[node name="Panel" type="Panel"]

anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 0.0
margin/bottom = 0.0
script/script = ExtResource( 1 )
__meta__ = { "_edit_lock_":true }

[node name="VBoxContainer" type="VBoxContainer" parent="."]

anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 3
size_flags/vertical = 3
margin/left = 10.0
margin/top = 10.0
margin/right = 10.0
margin/bottom = 10.0
alignment = 0
__meta__ = { "_edit_lock_":true }

[node name="Terminal" parent="VBoxContainer" instance=ExtResource( 2 )]

anchor/right = 0
anchor/bottom = 0
size_flags/vertical = 3
margin/right = 1004.0
margin/bottom = 553.0
dynamicFont = ExtResource( 3 )
font_x_offset = 0.2
font_y_offset = -0.2
resize_cell_x = 1.5
resize_cell_y = 1.5
foregound_default = Color( 1, 1, 1, 1 )
background_default = Color( 0, 0, 0, 1 )
default_char = " "

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]

focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 557.0
margin/right = 1004.0
margin/bottom = 580.0
alignment = 0

[node name="font_plus" type="Button" parent="VBoxContainer/HBoxContainer"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 45.0
margin/bottom = 23.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "font +"
flat = false

[node name="font_minus" type="Button" parent="VBoxContainer/HBoxContainer"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 49.0
margin/top = 0.0
margin/right = 91.0
margin/bottom = 23.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "font -"
flat = false

[node name="Button2" type="Button" parent="VBoxContainer/HBoxContainer"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 95.0
margin/top = 0.0
margin/right = 138.0
margin/bottom = 23.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "test3"
flat = false

[node name="LineEdit" type="LineEdit" parent="VBoxContainer/HBoxContainer"]

rect/min_size = Vector2( 200, 0 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 142.0
margin/top = 0.0
margin/right = 342.0
margin/bottom = 23.0
focus_mode = 2

[node name="enter" type="Button" parent="VBoxContainer/HBoxContainer"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 346.0
margin/top = 0.0
margin/right = 388.0
margin/bottom = 23.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "enter"
flat = false

[node name="fg_color" type="ColorPickerButton" parent="VBoxContainer/HBoxContainer"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 392.0
margin/top = 0.0
margin/right = 415.0
margin/bottom = 23.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "fg"
flat = false
color = Color( 1, 1, 1, 1 )
edit_alpha = true

[node name="bg_color" type="ColorPickerButton" parent="VBoxContainer/HBoxContainer"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 419.0
margin/top = 0.0
margin/right = 442.0
margin/bottom = 23.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "fg"
flat = false
color = Color( 1, 1, 1, 1 )
edit_alpha = true

[node name="clean" type="Button" parent="VBoxContainer/HBoxContainer"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 446.0
margin/top = 0.0
margin/right = 489.0
margin/bottom = 23.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "clean"
flat = false

[connection signal="pressed" from="VBoxContainer/HBoxContainer/font_plus" to="." method="_on_font_plus_pressed"]

[connection signal="pressed" from="VBoxContainer/HBoxContainer/font_minus" to="." method="_on_font_minus_pressed"]

[connection signal="text_entered" from="VBoxContainer/HBoxContainer/LineEdit" to="." method="_on_LineEdit_text_entered"]

[connection signal="pressed" from="VBoxContainer/HBoxContainer/enter" to="." method="_on_enter_pressed"]

[connection signal="pressed" from="VBoxContainer/HBoxContainer/clean" to="." method="_on_clean_pressed"]


